--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 Name Lastname <p> Adress
 <p> 
 </body>
-Kontaktmöglichkeiten: <p> YourEmail@gmail.com
+Contact options: <p> YourEmail@gmail.com
     <head>
     
 <h2 id="m65">Haftungs- und Schutzrechtshinweise</h2><p><strong>Haftungsausschluss</strong>: Die Inhalte dieses Onlineangebotes wurden sorgfältig und nach unserem aktuellen Kenntnisstand erstellt, dienen jedoch nur der Information und entfalten keine rechtlich bindende Wirkung, sofern es sich nicht um gesetzlich verpflichtende Informationen (z.B. das Impressum, die Datenschutzerklärung, AGB oder verpflichtende Belehrungen von Verbrauchern) handelt. Wir behalten uns vor, die Inhalte vollständig oder teilweise zu ändern oder zu löschen, soweit vertragliche Verpflichtungen unberührt bleiben. Alle Angebote sind freibleibend und unverbindlich. </p>
